Introduce Partner object in API
