# gateway/api/api.yaml
@@ -66,7 +66,7 @@ components:
       type: object
       properties:
         partner:
-          type: string
+          $ref: "#/components/schemas/Partner"
         user:
           $ref: "#/components/schemas/User"
         events:
@@ -86,6 +86,12 @@ components:
       type: object
       properties:
         error:
+          type: string
+    Partner:
+      required:
+        - id
+      properties:
+        id:
           type: string
     User:
       required:
